TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "135595906302208" [label="Start"];
  "135595906302208" -> "135595906302400";
  "135595906302400" [label="Code"];
  "135595906302400" -> "135595906302592";
  "135595906302400" -> "135595906303024";
  "135595906302400" -> "135595906303456";
  "135595906302592" [label="Declaration"];
  "135595906302592" -> "135595906302784";
  "135595906302592" -> "135595906302928";
  "135595906302784" [label="a"];
  "135595906302928" [label="3"];
  "135595906303024" [label="Declaration"];
  "135595906303024" -> "135595906303216";
  "135595906303024" -> "135595906303360";
  "135595906303216" [label="True"];
  "135595906303360" [label="1"];
  "135595906303456" [label="Function"];
  "135595906303456" -> "135595906303648";
  "135595906303456" -> "135595906303792";
  "135595906303456" -> "135595906303936";
  "135595906303648" [label="main"];
  "135595906303792" [label="Parameters"];
  "135595906303936" [label="Code"];
  "135595906303936" -> "135595906304128";
  "135595906303936" -> "135595906305136";
  "135595906304128" [label="Declaration"];
  "135595906304128" -> "135595906304320";
  "135595906304128" -> "135595906304464";
  "135595906304320" [label="True"];
  "135595906304464" [label="Expr"];
  "135595906304464" -> "135595906304656";
  "135595906304464" -> "135595906304944";
  "135595906304464" -> "135595906305088";
  "135595906304656" [label="Dereference"];
  "135595906304656" -> "135595906304848";
  "135595906304848" [label="True"];
  "135595906304944" [label="-"];
  "135595906305088" [label="20"];
  "135595906305136" [label="Return"];
  "135595906305136" -> "135595906305328";
  "135595906305328" [label="0"];
}
